--- a/project/templates/partials/_header.html.twig
+++ b/project/templates/partials/_header.html.twig
@@ -7,9 +7,12 @@
                 <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                    <a class="nav-link active" href="#">Home
-                        <span class="visually-hidden">(current)</span>
-                    </a>
+                        <a class="nav-link active" href="#">Acceuil
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{{ path('app_ingredient') }}">Ingrédients</a>
                     </li>
                 </ul>
 
