--- a/project/templates/partials/_header.html.twig
+++ b/project/templates/partials/_header.html.twig
@@ -12,7 +12,10 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="{{ path('app_ingredient') }}">Ingrédients</a>
+                        <a class="nav-link active" href="{{ path('app_ingredient') }}">Mes ingrédients</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{{ path('recette_index') }}">Mes recettes</a>
                     </li>
                 </ul>
 
