--- a/project/templates/pages/security/login.html.twig
+++ b/project/templates/pages/security/login.html.twig
@@ -6,6 +6,11 @@
 
 <div class="container">
     <h1 class="mt-4">Formulaire de connection</h1>
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success mt-4">
+            {{ message }}
+        </div>
+    {% endfor %}
 
     {% if error %}
         <div class="alert alert-danger mt-4">
