association between recipes, ingredients for users

--- a/project/templates/partials/_header.html.twig
+++ b/project/templates/partials/_header.html.twig
@@ -5,20 +5,43 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarColor03">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Acceuil
-                            <span class="visually-hidden">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{{ path('app_ingredient') }}">Mes ingrédients</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{{ path('recette_index') }}">Mes recettes</a>
-                    </li>
-                </ul>
-
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Acceuil
+                                <span class="visually-hidden">{{ path('app_index') }}</span>
+                            </a>
+                        </li>
+                        {% if app.user %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_ingredient') }}">Mes recettes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('recette_index') }}">Mes ingrédients</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                    <div class="d-flex">
+                        <ul class="navbar-nav me-auto">
+                            {% if app.user %}
+                                <li class="nav-item dropdown" style="margin-right: 5rem;">
+                                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.fullName}}</a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="{{ path('user.edit', { id : app.user.id }) }}">Modifier mes informations</a>
+                                        <a class="dropdown-item" href="{{ path('user.edit.password', { id : app.user.id } ) }}">Modifier mon mot de passe</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="{{ path('security.logout') }}">Deconnection</a>
+                                    </div>
+                                </li>
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="{{ path('security.login') }}">Login</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="{{ path('security.registration') }}">Register</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </div>
                 </div>
             </div>
     </nav>
