--- a/project/templates/pages/recette/edit.html.twig
+++ b/project/templates/pages/recette/edit.html.twig
@@ -55,6 +55,13 @@
                 {{ form_errors(form.favorites) }}
             </div>
         </div>
+        <div class="form-check">
+            {{ form_label(form.isPublic) }}
+            {{ form_widget(form.isPublic) }}
+            <div class="form-error">
+                {{ form_errors(form.isPublic) }}
+            </div>
+        </div>
         <div class="form-group">
             {{ form_label(form.ingredients) }}
             {{ form_widget(form.ingredients) }}
