--- a/project/templates/partials/_header.html.twig
+++ b/project/templates/partials/_header.html.twig
@@ -1,22 +1,20 @@
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="{{ path('app_index') }}">SymRecipe</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarColor03">
                     <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Acceuil
-                                <span class="visually-hidden">{{ path('app_index') }}</span>
-                            </a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('recette.index.public') }}">Recettes</a>
+                            </li>
                         {% if app.user %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_ingredient') }}">Mes recettes</a>
+                                <a class="nav-link" href="{{ path('app_ingredient') }}">Mes ingrédients</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('recette_index') }}">Mes ingrédients</a>
+                                <a class="nav-link" href="{{ path('recette_index') }}">Mes recettes</a>
                             </li>
                         {% endif %}
                     </ul>
