--- a/project/templates/pages/recette/edit.html.twig
+++ b/project/templates/pages/recette/edit.html.twig
@@ -69,6 +69,13 @@
                 {{ form_errors(form.ingredients) }}
             </div>
         </div>
+        <div class="form-group mt-4">
+            {{ form_label(form.imageFile) }}
+            {{ form_widget(form.imageFile) }}
+            <div class="form-error">
+                {{ form_errors(form.imageFile) }}
+            </div>
+        </div>
         <div class="form-group">
             {{ form_row(form.submit)}}
         </div>
