✨Add contact form

--- a/project/templates/partials/_header.html.twig
+++ b/project/templates/partials/_header.html.twig
@@ -16,6 +16,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('recette_index') }}">Mes recettes</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
+                            </li>
                         {% endif %}
                     </ul>
                     <div class="d-flex">
