✨sending mail function as service

--- a/project/templates/emails/contact.html.twig
+++ b/project/templates/emails/contact.html.twig
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
     </head>
     <body>
-<h1>Demande de {{ contact.fullName }}</h1>
+{# <h1>Demande de {{ contact.fullname }}</h1>
 <p>Email : {{ contact.email }}</p>
 <p>Sujet : {{ contact.subject }}</p>
-<p>Message : </p>
+<p>Message : </p> #}
 <div>
-    {{ contact.message | raw }}
+    {# {{ contact.message | raw }} #}
 </div>
     </body>
 </html>
