--- a/project/templates/partials/_header.html.twig
+++ b/project/templates/partials/_header.html.twig
@@ -29,6 +29,11 @@
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item" href="{{ path('user.edit', { id : app.user.id }) }}">Modifier mes informations</a>
                                         <a class="dropdown-item" href="{{ path('user.edit.password', { id : app.user.id } ) }}">Modifier mon mot de passe</a>
+
+                                        <div class="dropdown-divider"></div>
+                                        {% if 'ROLE_ADMIN' in app.user.roles %}
+                                            <a class="dropdown-item" href="{{ path('admin') }}">Panneau d'administration</a>
+                                        {% endif %}
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="{{ path('security.logout') }}">Deconnection</a>
                                     </div>
