--- a/project/templates/pages/security/login.html.twig
+++ b/project/templates/pages/security/login.html.twig
@@ -19,7 +19,7 @@
     {% endif %}
     
 
-    <form action="{{ path('security.login') }}" method='post'>
+    <form action="{{ path('security.login') }}" method='post' name="login">
         <div class="form-group">
         <label for="username" class="form-label mt-4">Email address</label>
         <input value="{{ last_username }}" type="email" name="_username" class="form-control" id="username" aria-describedby="emailHelp" placeholder="exemple@symrecipe.com">
